--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p tsconfig-build.json && sass -s compressed --no-sourcemap 'src/style/main.scss:dist/main.css'",
-    "dev": "concurrently 'tsc --watch -p tsconfig.json' 'sass --watch -s compressed --embed-sources \"src/style/main.scss:dist/main.css\"'"
+    "build": "tsc -p tsconfig-build.json && sass -s compressed --no-sourcemap 'src/styles/main.scss:dist/main.css'",
+    "dev": "concurrently 'tsc --watch -p tsconfig.json' 'sass --watch -s compressed --embed-sources \"src/styles/main.scss:dist/main.css\"'"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,6 @@
   "homepage": "https://github.com/jxmked/Browser-Tester#readme",
   "devDependencies": {
     "concurrently": "^7.4.0",
-    "ts-node": "^10.9.1",
     "typescript": "^4.8.2",
     "sass": "^1.54.9"
   }
