--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p tsconfig-build.json && sass -s compressed --no-sourcemap 'src/styles/main.scss:dist/main.css'",
-    "dev": "concurrently --raw 'tsc --watch -p tsconfig.json' 'sass --watch -s compressed --embed-sources \"src/styles/main.scss:dist/main.css\"'"
+    "build": "tsc -p tsconfig-build.json && sass -s compressed --no-source-map \"./src/styles/main.scss:dist/main.css\"",
+    "dev": "concurrently --raw \"tsc --watch -p tsconfig.json\" \"sass --watch -s compressed --embed-sources \"./src/styles/main.scss:dist/main.css\"\""
   },
   "repository": {
     "type": "git",
@@ -20,11 +20,14 @@
   "bugs": {
     "url": "https://github.com/jxmked/Browser-Tester/issues"
   },
-  "homepage": "https://github.com/jxmked/Browser-Tester#readme",
+  "homepage": "https://jxmked.github.io/Browser-Tester/",
   "devDependencies": {
     "@types/modernizr": "^3.5.3",
     "concurrently": "^7.4.0",
     "sass": "^1.54.9",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "modernizr": "^3.12.0"
   }
 }
