--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@types/modernizr": "^3.5.3",
     "modernizr": "^3.12.0",
     "pinia": "^2.0.23",
     "vue": "^3.2.41"
