--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "browser-tester",
   "version": "0.0.0",
   "scripts": {
+    "gen-mdnr": "modernizr -c modernizr-config.json",
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
@@ -10,13 +11,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@types/modernizr": "^3.5.3",
-    "modernizr": "^3.12.0",
     "pinia": "^2.0.23",
     "vue": "^3.2.41"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/modernizr": "^3.5.3",
     "@types/node": "^16.11.68",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
@@ -24,6 +24,7 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "modernizr": "^3.12.0",
     "node-sass": "^7.0.3",
     "npm-run-all": "^4.1.5",
     "sass-loader": "^13.1.0",
