--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "browser-tester",
-  "version": "1.0.0",
+  "version": "0.1.3",
   "description": "Test Basic Browser Capabilities",
   "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "gen-mdnr": "modernizr -c modernizr-config.json -d assets/lib/modernizr-custom.js",
     "build": "tsc -p tsconfig-build.json && sass -s compressed --no-source-map \"./src/styles/main.scss:dist/main.css\"",
     "dev": "concurrently --raw \"tsc --watch -p tsconfig.json\" \"sass --watch -s compressed --embed-sources \"./src/styles/main.scss:dist/main.css\"\""
@@ -22,7 +21,7 @@
     "url": "https://github.com/jxmked/Browser-Tester/issues"
   },
   "homepage": "https://jxmked.github.io/Browser-Tester/",
-  "dependencies": {
+  "devDependencies": {
     "@types/modernizr": "^3.5.3",
     "concurrently": "^7.4.0",
     "modernizr": "^3.12.0",
