--- a/.github/workflows/create-mdnzr.yml
+++ b/.github/workflows/create-mdnzr.yml
@@ -24,7 +24,10 @@ jobs:
       
       - name: 'Build App'
         run: npm run build
-        
+      
+      - name: 'Minify Main Script'
+        run: npm run minify
+
       - name: 'Push to gh-pages'
         run: |
             git config --global user.email "${{ secrets.EMAIL }}"
